--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      JWT_SECRET: testsecret
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
       NODE_ENV: test
 
     steps:
