--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_ENV=test JWT_SECRET=testsecret jest",
+    "test": "NODE_ENV=test JWT_SECRET=testsecret npx jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -23,8 +23,9 @@
     "prisma": "^6.19.2"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
-    "nodemon": "^3.1.11",
-    "supertest": "^7.2.2"
-  }
+  "jest": "^29.7.0",
+  "nodemon": "^3.1.11",
+  "supertest": "^7.2.2"
+}
+
 }
