--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_ENV=test JWT_SECRET=testsecret npx jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test JWT_SECRET=testsecret npx jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
