--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test JWT_SECRET=testsecret npx jest",
+    "test": "vitest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -23,9 +23,9 @@
     "prisma": "^6.19.2"
   },
   "devDependencies": {
-  "jest": "^29.7.0",
-  "nodemon": "^3.1.11",
-  "supertest": "^7.2.2"
-}
-
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.2.2",
+    "vitest": "^4.0.18"
+  }
 }
